--- a/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
@@ -242,8 +242,7 @@
                 <div class="row p-5">
                     <div class="btn-list">
                         <button id="btnSubmit" class="btn btn-info">@Localizer["SaveChanges"]</button>
-                        <a asp-action="Index" asp-controller="Assets" asp-route-id="@Model.StoreId"
-                           id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]</a>
+                        <a asp-action="Index" asp-controller="Assets" asp-route-id="@Model.StoreId" id="btnCancel" class="btn btn-gray"><i class="fa fa-close"></i>&nbsp;@Localizer["Cancel"]</a>
                     </div>
                 </div>
             </div>
