--- a/MODAMSWeb/Views/Shared/_Confirmation.cshtml
+++ b/MODAMSWeb/Views/Shared/_Confirmation.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
+﻿<div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-md modal-dialog-centered" role="document">
         <div class="modal-content">
             <form id="confirmationForm" method="post">
@@ -10,17 +9,16 @@
                 </div>
                 <div class="modal-body">
                     <p class="d-flex align-items-center" id="confirmMessage">
-                        <i class="bi bi-exclamation-triangle-fill text-warning me-2" style="font-size: 1.5rem;"></i>
                         <!-- Dynamic content goes here -->
                     </p>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-outline-danger d-flex align-items-center justify-content-center">
-                        <i class="fe fe-trash me-1 align-middle" style="font-size: 1rem;"></i>
+                    <button type="submit" class="btn btn-secondary">
+                        <i class="fa fa-trash me-1"></i>
                         <span class="align-middle" id="btnConrfirmText">Confirm</span>
                     </button>
-                    <button type="button" class="btn btn-outline-info d-flex align-items-center justify-content-center" data-bs-dismiss="modal">
-                        <i class="fe fe-x-circle me-1 align-middle" style="font-size: 1rem;"></i>
+                    <button type="button" class="btn btn-gray" data-bs-dismiss="modal">
+                        <i class="fa fa-close me-1"></i>
                         <span class="align-middle" id="btnCancelText">Cancel</span>
                     </button>
                 </div>
@@ -30,13 +28,17 @@
 </div>
 
 <script>
-    function openConfirmation({actionUrl, title, message, btnConfirmText, btnCancelText}) {
+    function openConfirmation({actionUrl, title, message, btnConfirmText, btnCancelText, data=""}) {
         $('#confirmationForm').attr('action', actionUrl);
         $('#confirmTitle').html(title)
         $('#btnConrfirmText').html(btnConfirmText);
         $('#btnCancelText').html(btnCancelText);
+        const sHtml = data!==""?
+            `<input type="hidden" name="assetId" value="${data}" />`:
+            `<input type="hidden" name="assetId" value="" />`;
         $('#confirmMessage').html(`
-            <i class="bi bi-exclamation-triangle-fill text-warning me-2" style="font-size: 1.5rem;"></i>
+            ${sHtml}
+            <i class="bi bi-exclamation-triangle-fill text-secondary me-2" style="font-size: 2rem;"></i>
             ${message}
         `);
         $('#confirmModal').modal('show');
