--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
@@ -88,8 +88,7 @@
                                                                 @{
                                                                     if (dt.Id > 0)
                                                                     {
-                                                                        <a href="#" class="btn btn-sm btn-outline-secondary border me-2"
-                                                                           data-bs-toggle="dropdown" aria-expanded="false">
+                                                                        <a href="#" class="btn btn-sm btn-outline-secondary border me-2" onclick="deleteDocument(@dt.Id);">
                                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                                                                                 <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
                                                                                 <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
@@ -99,7 +98,7 @@
                                                                             <div class="p-5">
                                                                                 <h4 class="dropdown-title text-secondary">@Localizer["DeleteDocument"]</h4><br />
                                                                                 <p>@Localizer["DeleteConfirmationMessage"]<br /><br />@Localizer["AreYouSure"]</p>
-                                                                                <a asp-area="Users" asp-controller="Assets" asp-action="DeleteDocument" asp-route-id="@dt.Id" class="btn btn-secondary btn-sm"><i class="mdi mdi-checkbox-marked-circle-outline"></i> @Localizer["DeleteDocument"]</a>
+                                                                                <a asp-area="Users" asp-controller="Assets" asp-action="DeleteDocument" asp-route-id="@dt.Id" class="btn btn-gray btn-sm"><i class="mdi mdi-checkbox-marked-circle-outline"></i> @Localizer["DeleteDocument"]</a>
                                                                             </div>
                                                                         </div>
                                                                     }
@@ -138,7 +137,7 @@
 
                                     <div class="form-group">
                                         <button class="btn btn-primary btn-sm"><i class="fa fa-solid fa-upload"></i> @Localizer["Upload"]</button>
-                                        <button class="btn btn-secondary btn-sm" id="btnCancel"><i class="fa fa-times-circle-o"></i> @Localizer["Cancel"]</button>
+                                        <button class="btn btn-gray btn-sm" id="btnCancel"><i class="fa fa-times-circle-o"></i> @Localizer["Cancel"]</button>
                                     </div>
                                 </form>
 
@@ -161,6 +160,8 @@
     </div>
 </div>
 <section id="dvDocumentTypesData" style="display:none;"></section>
+@await Html.PartialAsync("~/Views/Shared/_Confirmation.cshtml")
+
 @section Scripts
 {
     <script>
@@ -206,8 +207,16 @@
             getDocumentName(id);
         }
 
-        const deleteDocument = (id) => {
-
+        const deleteDocument = (id) =>{
+            const options = {
+                    actionUrl: `/Users/Assets/DeleteDocument/${id}`,
+                    title: '@Localizer["DeleteDocument"]',
+                    message: '@Localizer["DeleteConfirmationMessage"]',
+                    btnConfirmText: '@Localizer["Confirm"]',
+                    btnCancelText: '@Localizer["Cancel"]'
+                };
+                //console.log(options);
+                openConfirmation(options);
         }
 
         const getDocumentName = (id) => {
