--- a/MODAMSWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -50,7 +50,7 @@
                     </button>
                 </div>
                 <div class="text-center pt-3">
-                    <p class="text-dark mb-0">Not a member?<a href="Register" class="text-primary ms-1">Register</a></p>
+                    <p class="text-dark mb-0">Not registered yet?<a href="Register" class="text-primary ms-1">Register</a></p>
                 </div>
             </form>
         </div>
